[tool.poetry]
name = "ktrack-core"
version = "0.1.0"
description = "My VFX Pipeline Core Foundation"
authors = ["Jan Honsbrok <jan.honsbrok@gmail.com>"]
packages = [
    { include = "ktrack_api" },
    { include = "kttk" },
    { include = "kttk_widgets" },
]


[tool.poetry.dependencies]
python = "^2.7"
mongoengine = "^0.18.2"
blinker = "^1.4"
frozendict = "^1.2"
pyyaml = "^5.1"
fire = "^0.2.1"
valideer = "^0.4.2"
attrs = "^19.3"
typing = "^3.7"
tabulate = "^0.8.6"
"Qt.py" = "^1.2"
six = "^1.13"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
mongomock = "^3.18"
junitparser = "^1.4"
mock = "^3.0"
pytest = "=3.5"
pytest-cov = "2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
